Init commit: dynamically create layout

--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
 </head>
 
 <body>
+    <header class="header">
+        <h1 class="heading">Etch A Sketch</h1>
+    </header>
+
     <script type="text/javascript" src="javascript.js"></script>
 </body>
 
