Add resizeable grid

--- a/index.html
+++ b/index.html
@@ -13,6 +13,14 @@
     <header class="header">
         <h1 class="heading">Etch A Sketch</h1>
     </header>
+    <div class="wrapper">
+        <div class="settings">
+            <button class="buttons" id="draw">Draw</button>
+            <button class="buttons" id="erase">Erase</button>
+            <input type="range" min="16" max="50" value="16" class="slider" id="range">
+        </div>
+        <div id="container"></div>
+    </div>
 
     <script type="text/javascript" src="javascript.js"></script>
 </body>
