--- a/index.html
+++ b/index.html
@@ -18,10 +18,11 @@
         <div class="settings">
             <h3 class="title">Settings</h3>
             <input type="color" id="color" name="color" value="#000000">
-            <button class="buttons" id="draw">Draw</button>
-            <button class="buttons" id="erase">Erase</button>
+            <button class="button" id="draw">Draw</button>
+            <button class="button" id="erase">Erase</button>
+            <button class="button" id="clear">Clear</button>
             <p>Grid Size</p>
-            <input type="range" min="4" max="20" value="4" class="slider" id="range">
+            <input type="range" min="4" max="10" value="4" class="slider" id="range">
         </div>
         <div id="container"></div>
     </div>
